BroadleafCommerce/QA#1765 - Fix the display of read-only FilterBuilder value fields to avoid actions overlapping the text

--- a/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/blc-query-builder.css
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/blc-query-builder.css
@@ -384,6 +384,7 @@
     margin: 0;
 }
 .query-builder-filters-container .read-only {
+    max-width: 620px;
     vertical-align: middle;
 }
 
